setting path correctly

--- a/general/credentials.yaml
+++ b/general/credentials.yaml
@@ -5,7 +5,7 @@ credentials:
           - usernamePassword:
               description: "GH-token"
               id: "GH-token"
-              password: ${readFile:${SECRETS}/githubToken}
+              password: ${githubToken}
               scope: GLOBAL
-              username: ${readFile:${SECRETS}/githubUser}
+              username: ${githubUser}
               usernameSecret: true
