--- a/general/license.yaml
+++ b/general/license.yaml
@@ -1,6 +1,6 @@
 # 1.2.1 | Licensing of CloudBees Operation Center
 license:
   certificate: |
-    ${readFile:${SECRETS}/licenseCert}
+    ${licenseCert}
   key: |
-    ${readFile:${SECRETS}/licenseKey}
+    ${licenseKey}
