--- a/general_tpl/main.yaml
+++ b/general_tpl/main.yaml
@@ -18,6 +18,9 @@ jenkins:
           - "listSelectionColumn"
     - all:
         name: "all"
+  # Best-Practice: Do not use In-Build agents
+  # https://support.cloudbees.com/hc/en-us/articles/115002654991
+  numExecutors: 0
 unclassified:
   # Best-Practice: Use SCM for Managed Master Casc Bundles
   # https://docs.cloudbees.com/docs/cloudbees-ci/2.332.3.4/casc-controller/add-bundle#_adding_casc_bundles_from_an_scm_tool
@@ -79,7 +82,7 @@ advisor:
     - "OtherLogs"
     - "SlaveLaunchLogs"
   nagDisabled: false
-  # Node pools for Kubernetes installation 
+  # Node pools for Kubernetes installation
   # masterprovisioning:
   #   kubernetes:
   #     yaml: |-
@@ -94,4 +97,4 @@ advisor:
   #               - key: "dedicated"
   #                 operator: "Equal"
   #                 value: "apps"
-  #                 effect: "NoSchedule" 
+  #                 effect: "NoSchedule"
