--- a/modern/items-controllers.yaml
+++ b/modern/items-controllers.yaml
@@ -51,3 +51,21 @@ items:
         readinessFailureThreshold: 100
         livenessTimeoutSeconds: 10
         domain: fresh-boy
+  - kind: folder
+    name: admin
+    displayName: admin
+    items:
+    - kind: clusterOpProject
+      name: restart-all-controllers
+      concurrentBuild: true
+      displayName: restart-all-controllers
+      operations:
+      - managedMasterClusterOperation:
+          failureMode: IMMEDIATELY
+          clusterOpSteps:
+          - restartMasterNowClusterOpStep: {}
+          timeoutSeconds: 0
+          itemSource:
+            jenkinsRootItemSource: {}
+          inParallel: 0
+          noRetries: 0
