--- a/modern.oc.ldap/main.yaml
+++ b/modern.oc.ldap/main.yaml
@@ -70,12 +70,13 @@ masterprovisioning:
     nodeSelectors: "ci_type=cb-apps"
     yaml: |-
       ---
+      apiVersion: apps/v1
       kind: StatefulSet
       spec:
         template:
           spec:
             tolerations:
-            - key: "dedicated"
-              operator: "Equal"
-              value: "cb-apps"
-              effect: "NoSchedule"
+              - key: "dedicated"
+                operator: "Equal"
+                value: "cb-apps"
+                effect: "NoSchedule"
