Adding credentials for GitHub ST Token

--- a/modern.oc.ldap/credentials.yaml
+++ b/modern.oc.ldap/credentials.yaml
@@ -3,9 +3,13 @@ credentials:
     domainCredentials:
       - credentials:
           - usernamePassword:
-              description: "GH-token"
-              id: "GH-token"
-              password: ${githubToken}
-              scope: GLOBAL
-              username: ${githubUser}
-              usernameSecret: true
+            description: "GH-token"
+            id: "GH-token"
+            password: ${githubToken}
+            scope: GLOBAL
+            username: ${githubUser}
+            usernameSecret: true
+          - string:
+            id: "GH-ST-token"
+            scope: GLOBAL
+            secret: ${githubToken}
