commeting out crendentials

--- a/modern.oc.ldap/credentials.yaml
+++ b/modern.oc.ldap/credentials.yaml
@@ -9,7 +9,7 @@ credentials:
             scope: GLOBAL
             username: ${githubUser}
             usernameSecret: true
-          - string:
-            id: "GH-ST-token"
-            scope: GLOBAL
-            secret: ${githubToken}
+          # - string:
+          #   id: "GH-ST-token"
+          #   scope: GLOBAL
+          #   secret: ${githubToken}
