--- a/modern.oc.ldap/credentials.yaml
+++ b/modern.oc.ldap/credentials.yaml
@@ -1,15 +1,16 @@
 credentials:
   system:
     domainCredentials:
-      - credentials:
-          - usernamePassword:
-            description: "GH-token"
-            id: "GH-token"
-            password: ${githubToken}
-            scope: GLOBAL
-            username: ${githubUser}
-            usernameSecret: true
-          # - string:
-          #   id: "GH-ST-token"
-          #   scope: GLOBAL
-          #   secret: ${githubToken}
+    - credentials:
+      - usernamePassword:
+          description: "GH-token"
+          id: "GH-token"
+          password: ${githubToken}
+          scope: GLOBAL
+          username: ${githubUser}
+          usernameSecret: true
+      - string:
+          description: "GH-ST-token"
+          id: "GH-ST-token"
+          scope: GLOBAL
+          secret: ${githubToken}
