--- a/modern.oc.advance/bundle.yaml
+++ b/modern.oc.advance/bundle.yaml
@@ -1,5 +1,5 @@
 apiVersion: "1"
-id: "modern.oc.parent"
+id: "modern.oc.advance"
 version: "1"
 jcasc:
   - main.yaml
@@ -15,3 +15,5 @@ items:
   - items-load-controllers.yaml
 rbac:
   - rbac.yaml
+variables:
+  - variables.yaml
