pr-000592:  Adding Admin as Variable

--- a/modern.oc.advance/main.yaml
+++ b/modern.oc.advance/main.yaml
@@ -36,6 +36,8 @@ unclassified:
   usageStatisticsCloudBees:
     disabledJenkinsUsageStatistics: true
     usageStatisticsCollected: false
+  location:
+    adminAddress: ${adminCBCIAddress}
 cloudBeesCasCServer:
   defaultBundle: "good-boy"
   visibility: true
