--- a/modern.oc.advance/variables.yaml
+++ b/modern.oc.advance/variables.yaml
@@ -2,3 +2,4 @@ variables:
   - backup_bucketName: pr-000592-v3-ci-backups
   - backup_folderName: cbci/backups
   - backup_region: us-east-1
+  - adminCBCIAddress: example.admin@org.com
